--- a/aboutgames.html
+++ b/aboutgames.html
@@ -17,7 +17,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/print.css" async />
 	<script src="scripts/trojurovne_menu.js"></script>
-
 </head>
 <body>
 	<header>
@@ -41,16 +40,16 @@
 			<a href="games.html" class="breadcrumbsLink">Hry</a>
 		</li>
 		<li class="breadcrumbsItem">
-			<a href="ine.html" class="breadcrumbsLink">Ine</a>
+			<a href="ine.html" class="breadcrumbsLink">Iné</a>
 		</li>
 		<li class="breadcrumbsItem">
-			<a href="aboutgames.html" class="breadcrumbsLink breadcrumbsLinkActive">O puzzle hrach</a>
+			<a href="aboutgames.html" class="breadcrumbsLink breadcrumbsLinkActive">O puzzle hrách</a>
 		</li>
 	</ul>
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section  id="history-text" class="col-lg-9 col-md-12 col-sm-12 ">
-			<h4>O puzzle hrach</h4>
+			<h4>O puzzle hrách</h4>
 				<br>
 				<br>
 
@@ -79,6 +78,7 @@
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
+				<div id="nameday_date_and_name"></div>
 				<div id="nameday_find"></div>
 				<br>
 			</aside>
@@ -86,7 +86,7 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<a href="#" class="action-print">Vytlačiť stránku</a>
 	  		<hr>
 	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
