--- a/autory.html
+++ b/autory.html
@@ -38,18 +38,18 @@
 			<a href="index.html" class="breadcrumbsLink">Domov</a>
 		</li>
 		<li class="breadcrumbsItem">
-			<a href="autory.html" class="breadcrumbsLink breadcrumbsLinkActive">Autory</a>
+			<a href="autory.html" class="breadcrumbsLink breadcrumbsLinkActive">Autori</a>
 		</li>
 	</ul>
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12 ">
-				<h4>Autory</h4>
+				<h4>Autori</h4>
 				<br>
 				<br>
 				<div class="text-in-div container">
-					<img alt="hra1" src="img/foto1.png" class="img-left"><p>Volám sa Hanna Hryharouskaya. Ja som som z Bieloruska, miesto Brest.Do 2011 som študovala na matematicko-ekonomickom gimnaziu Žukova G.K v Breste.V rokoch 2011-2015 som študovala v Brestskom štátnom polytechnickom kolize (od 2015. roka už Brestká štátna technická univerzita) na stavebnej fakulte. Teraz bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. </p><br><br>
-					<img alt="hra1" src="img/foto2.png" class="img-right"><p>Volám sa Tetiana Kukhelna. Som ukrajinka. Bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. Mám veľké plány do svojej budúcnosti. Túžba po poznaní a odpovede na moje otázky. Zmyslom života je byť šťastnou a robiť to, čo mi to prinesie.</p><br>
+					<img alt="hra1" src="img/foto1.png" class="img-left"><p>Volám sa Hanna Hryharouskaya. Ja som z Bieloruska, miesto Brest.Do 2011 som študovala na matematicko-ekonomickom gymnáziu Žukova G.K v Breste.V rokoch 2011-2015 som študovala v Brestskom štátnom polytechnickom kolize (od 2015. roka už Brestká štátna technická univerzita) na stavebnej fakulte. Teraz bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. </p><br><br>
+					<img alt="hra1" src="img/foto2.png" class="img-right"><p>Volám sa Tetiana Kukhelna. Som ukrajinka. Bývam v Bratislave a študujem na Slovenskej technickej univerzite na fakulte elektrotechniky a informatiky. Mám veľké plány do svojej budúcnosti. Túžba po poznaní a odpovede na moje otázky. Mojim zmyslom života je byť šťastnou a robiť to, čo mi to prinesie.</p><br>
 					<q><i>A mind of moderate capacity which closely pursues one study must infallibly arrive at great proficiency in that study.
 								<br>― Mary Shelley, Frankenstein</i></q>
 					<br><br>			
@@ -68,7 +68,7 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<a href="#" class="action-print">Vytlačiť stranku</a>
 	  		<hr>
 	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
