--- a/ultraland.html
+++ b/ultraland.html
@@ -44,7 +44,7 @@
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12">
-				<h6> Ak hrá príliš veľká prosím zmenšíte veľkosť v prehadaci </h6>
+				<h6> Ak hra má príliš veľké rozlíšenie, prosím zmenši veľkosť v prehliadači </h6>
 				<button id="start">Začať hru</button>
 				<button id="demo">Spusti demo</button>
 				<div id="timer"></div>
@@ -53,6 +53,7 @@
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
+				<div id="nameday_date_and_name"></div>
 				<div id="nameday_find"></div>
 				<br>
 				
@@ -61,7 +62,7 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<a href="#" class="action-print">Vytlačiť stranku</a>
 	  		<hr>
 	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
