--- a/gameHanna.html
+++ b/gameHanna.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/site.css">
 	<link rel="stylesheet" href="css/breadcrumbs.css">
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -17,7 +16,6 @@
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="games/Hannagame/code.js"></script>
 	<script src="scripts/trojurovne_menu.js"></script>
-
 
 </head>
 <body>
@@ -51,7 +49,7 @@
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12" >
-				<h6>  🌺 Ak sa hra nezačíta tak počkajte ešte trochu alebo obnovite web stránku  🌺 </h6>
+				<h6>  🌺 Ak sa hra nenačíta tak počkajte pár sekúnd alebo obnovte web stránku  🌺 </h6>
 				<object class="object" data="HannaGame/indexGame.html" style=" width: 100%; height: 100% " ></object>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
@@ -65,7 +63,7 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<a href="#" class="action-print">Vytlačiť stranku</a>
 	  		<hr>
 	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
