--- a/hraTetiana.html
+++ b/hraTetiana.html
@@ -50,7 +50,7 @@
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12" >
-				<h6>  Hra sa zacne ked stlacite Zacat! </h6>
+				<h6>  Hra sa začne keď stlačíte Začať! </h6>
 				<object class="object" data="puzzleTetiana/index.html" style=" width: 100%; height: 100% " ></object>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
@@ -64,7 +64,7 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačit stranku</a>
+	  		<a href="#" class="action-print">Vytlačiť stranku</a>
 	  		<hr>
 	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
