added myself info into documentation.html

--- a/documentation.html
+++ b/documentation.html
@@ -78,9 +78,9 @@
 						    </tr>
 						    <tr>
 						        <td><span style="font-family: vt323, monospace; text-align: center;">Vlad Chernov</span></td>
-						        <td></td>
-						        <td></td>
-						        <td></td>
+						        <td>breadcrumbs a počítadlo osobných prístupov</td>
+						        <td>zobrazenie počítadla osobných prístupov na stránku. zobrazenie histórie prehliadania na každej stránke okrem "Domov" vo forme path-based breadcrumbs.</td>
+						        <td>xchernov@stuba.sk</td>
 						    </tr>
 					</table>
 					<br><br>
