--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script src="scripts/cntVisitor.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/print.css" async />
+	<link rel="stylesheet" type="text/css" href="css/print.css">
 	<script src="scripts/trojurovne_menu.js"></script>
 
 
@@ -41,7 +41,8 @@
 			<section id="section" class="col-lg-9 col-md-12 col-sm-12">
 
 				<div class="typewriter">
-				  <h1><div id="nameday_date_and_name"></div></h1>
+					<h1 id="nameday_date_and_name"></h1>
+				  <div id="nameday_date_and_name"></div>
 				</div>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
