--- a/documentation.html
+++ b/documentation.html
@@ -15,6 +15,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<script src="scripts/trojurovne_menu.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/print.css">
 
 </head>
 <body>
