--- a/gameHanna.html
+++ b/gameHanna.html
@@ -17,6 +17,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="games/Hannagame/code.js"></script>
 	<script src="scripts/trojurovne_menu.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/print.css">
 
 
 </head>
