--- a/ine.html
+++ b/ine.html
@@ -14,7 +14,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/print.css" async />
+	<link rel="stylesheet" type="text/css" href="css/print.css" >
 	<script src="scripts/trojurovne_menu.js"></script>
 
 </head>
