--- a/hraTetiana.html
+++ b/hraTetiana.html
@@ -15,7 +15,7 @@
 	<script src="scripts/main_processes.js"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/print.css" >
+	<link rel="stylesheet" type="text/css" href="css/print.css">
 	<script src="scripts/trojurovne_menu.js"></script>
 
 
@@ -50,7 +50,7 @@
 	<div>
 		<div class="row content margin-scroll" id="content">
 			<section class="col-lg-9 col-md-12 col-sm-12" >
-				<h6>  Hra sa začne keď stlačíte Začať! </h6>
+				<h6>  Hra sa zacne ked stlacite Zacat! </h6>
 				<object class="object" data="puzzleTetiana/index.html" style=" width: 100%; height: 100% " ></object>
 			</section>
 			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
@@ -64,7 +64,7 @@
 	</div>
 	<footer class="footer">
 	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačiť stranku</a>
+	  		<a href="#" class="action-print">Vytlačit stranku</a>
 	  		<hr>
 	  		<br>
 	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
