--- a/ine.html
+++ b/ine.html
@@ -47,12 +47,12 @@
 					<h6>O puzzle hrách</h6>
 					<br>
 					<img alt="hra1" src="img/puzzle2.jpg" class="img-left"><p>Puzzle, skladací obrázok (anglická skladačka) alebo mozaika (ruská verzia) je logická hra, v ktorej je potrebné vyrobiť mozaiku z mnohých kúskov kresby rôznych tvarov.Podľa psychológov zbieranie hádaniek prispieva k rozvoju obrazného a logického myslenia, dobrovoľnej pozornosti, vnímania, najmä rozlišovania jednotlivých prvkov farbou, tvarom, veľkosťou atď.; učí vás správne vnímať spojenie medzi časťou a celkom; rozvíja jemnú motoriku. V angličtine jediné slovo „puzzle“ znamená puzzle každého druhu, nie nevyhnutne puzzle. </p><br>
-					<a href="aboutgames.html"> -> Viac o puzzle hrach <-</a>
+					<a href="aboutgames.html"> &raquo; Viac o puzzle hrach &raquo; </a>
 					<hr>
 					<br>
 					<h6>Documentacia ku hram</h6>
 					<br>
-					<a href="aboutgames.html"> -> Viac o rozdelenie uloh v projecte <-</a>
+					<a href="aboutgames.html"> &raquo; Viac o rozdelenie uloh v projecte &raquo; </a>
 					<hr>
 					<br>
 					<h6>Pouzite linky</h6><br>
@@ -75,7 +75,7 @@
 					<hr>
 				</div>
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12 notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
