--- a/puzzleTetiana/index.html
+++ b/puzzleTetiana/index.html
@@ -16,52 +16,52 @@
     </div>
     <div class="area">
         <div id="demoPic" hidden>
-            <span class="listen_demo" hidden><img src="photo_new_project/demo_obrazka.png"></span>
+            <span class="listen_demo" hidden><img src="photo_new_project/demo_obrazka.png" alt="obrazok"></span>
         </div>
         <div class="game">
             <div id="tar" class="target-blocks">
                 <div class="block_abs target" id="one" data-id="1"><img
-                        src="photo_new_project/chub_verch_siluet.png"></div>
+                        src="photo_new_project/chub_verch_siluet.png" alt="obrazok" ></div>
                 <div class="block_abs target" id="two" data-id="2"><img
-                        src="photo_new_project/brovi_siluet.png"></div>
+                        src="photo_new_project/brovi_siluet.png" alt="obrazok"></div>
                 <div class="block_abs target" id="three" data-id="3"><img
-                        src="photo_new_project/oci_siluet.png"></div>
+                        src="photo_new_project/oci_siluet.png" alt="obrazok"></div>
                 <div class="block_abs target" id="four" data-id="4"><img
-                        src="photo_new_project/kluv_siluet.png"></div>
+                        src="photo_new_project/kluv_siluet.png" alt="obrazok"></div>
                 <div class="block_abs target" id="five" data-id="5"><img
-                        src="photo_new_project/chvost_siluet.png"></div>
+                        src="photo_new_project/chvost_siluet.png" alt="obrazok"></div>
                 <div class="block_abs target" id="six" data-id="6"><img
-                        src="photo_new_project/krylo_lave_siluet.png"></div>
+                        src="photo_new_project/krylo_lave_siluet.png" alt="obrazok"></div>
                 <div class="block_abs target" id="seven" data-id="7"><img
-                        src="photo_new_project/krylo_prave_siluet.png"></div>
+                        src="photo_new_project/krylo_prave_siluet.png" alt="obrazok"></div>
                 <div class="block_abs target" id="eight" data-id="8"><img
-                        src="photo_new_project/lapa_lava_siluet.png"></div>
+                        src="photo_new_project/lapa_lava_siluet.png" alt="obrazok"></div>
                 <div class="block_abs target" id="nine" data-id="9"><img
-                        src="photo_new_project/lapa_prava_siluet.png"></div>
+                        src="photo_new_project/lapa_prava_siluet.png" alt="obrazok"></div>
                 <div class="block_abs target" id="ten" data-id="10"><img
-                        src="photo_new_project/telo_siluet.png"></div>
+                        src="photo_new_project/telo_siluet.png" alt="obrazok"></div>
             </div>
             <div class="draggable-blocks">
                 <div class="block draggable" data-id="1" style=""><img
-                        src="photo_new_project/chub_verch.png"></div>
-                <div class="block draggable" data-id="2" style=""><img
-                        src="photo_new_project/brovi.png"></div>
+                        src="photo_new_project/chub_verch.png" alt="obrazok"></div>
+                <div class="block draggable" data-id="2" style="" ><img
+                        src="photo_new_project/brovi.png" alt="obrazok"></div>
                 <div class="block draggable" data-id="3" style=""><img
-                        src="photo_new_project/oci.png"></div>
+                        src="photo_new_project/oci.png" alt="obrazok"></div>
                 <div class="block draggable" data-id="4" style=""><img
-                        src="photo_new_project/kluv.png"></div>
+                        src="photo_new_project/kluv.png" alt="obrazok"></div>
                 <div class="block draggable" data-id="5" style=""><img
-                        src="photo_new_project/chvost.png"></div>
+                        src="photo_new_project/chvost.png" alt="obrazok"></div>
                 <div class="block draggable" data-id="6" style=""><img
-                        src="photo_new_project/krylo_lave.png"></div>
+                        src="photo_new_project/krylo_lave.png" alt="obrazok"></div>
                 <div class="block draggable" data-id="7" style=""><img
-                        src="photo_new_project/krylo_prave.png"></div>
+                        src="photo_new_project/krylo_prave.png" alt="obrazok"></div>
                 <div class="block draggable" data-id="8" style=""><img
-                        src="photo_new_project/lapa_lava.png"></div>
+                        src="photo_new_project/lapa_lava.png" alt="obrazok"></div>
                 <div class="block draggable" data-id="9" style=""><img
-                        src="photo_new_project/lapa_prava.png"></div>
+                        src="photo_new_project/lapa_prava.png" alt="obrazok"></div>
                 <div class="block draggable" data-id="10" style=""><img
-                        src="photo_new_project/telo.png"></div>
+                        src="photo_new_project/telo.png" alt="obrazok"></div>
             </div>
         </div>
     </div>
