--- a/autory.html
+++ b/autory.html
@@ -53,7 +53,7 @@
 					<q><i>A mind of moderate capacity which closely pursues one study must infallibly arrive at great proficiency in that study.
 								<br>― Mary Shelley, Frankenstein</i></q>
 					<br><br>			
-					<img alt="hra1" src="img/foto3.png" class="img-left"><p><br>Volám sa Patrik Kupčulák, som študentom Slovenskej technickej univerzity v Bratislave a študujem aplikovanú informatiku. Informatika ma baví už od detstva. Mojim koníčkom je vývoj hier a šport.<br></strong><br> </p><br><br>
+					<img  src="img/foto3.png" class="img-left" alt="hra1" ><p><br>Volám sa Patrik Kupčulák, som študentom Slovenskej technickej univerzity v Bratislave a študujem aplikovanú informatiku. Informatika ma baví už od detstva. Mojim koníčkom je vývoj hier a šport.<br><br> </p><br><br>
 					<img alt="hra1" src="img/foto4.png" class="img-right"><p>Volám sa Vlad Chernov, študujem na STU v Bratislave (API). Milujem exaktné vedy ako fyzika a matematika. Baví ma programovanie. A taktiež mám rád športové hry.</p>
 				</div>
 			</section>
