--- a/documentation.html
+++ b/documentation.html
@@ -62,13 +62,13 @@
 						    <tr>
 						        <td><span style="font-family: vt323, monospace; text-align: center;">Patrik Kupčulák</span></td>
 						        <td>web komponent zobrazenia menin</td>
-						        <td>zobrazenie aktuálneho dátumu s meninami v daný deň. súčasťou je obojsmerné zisťovanie priradenia dátumu a mena (pomocou xml).pri vyhľadávaní mena dokáže rozpoznať aj časť mena (sub-string)</span></td>
+						        <td>zobrazenie aktuálneho dátumu s meninami v daný deň. súčasťou je obojsmerné zisťovanie priradenia dátumu a mena (pomocou xml).pri vyhľadávaní mena dokáže rozpoznať aj časť mena (sub-string)</td>
 						        <td>xkupculak@stuba.sk</td>
 						    </tr>
 						    <tr>
 						        <td><span style="font-family: vt323, monospace; text-align: center;">Hanna Hryharouskaya</span></td>
 						        <td>dizajn</td>
-						        <td><div>návrh grafického dizajnu pomocou css len v externom súbore.<div>responzívny dizajn + prispôsobenie stránky pre tlač pomocou css.</td>
+						        <td>návrh grafického dizajnu pomocou css len v externom súbore. Responzívny dizajn + prispôsobenie stránky pre tlač pomocou css + validacia HTML a CSS</td>
 						        <td>xhryharouskaya@stuba.sk</td>
 						    </tr>
 						    <tr>
@@ -93,16 +93,16 @@
 					<p>Najviac wireframov a naše inspiration collage na dizajn -> <a href="https://www.figma.com/file/MFEELiRwU47JSGAmGwAcNS/WebTechProject?node-id=0%3A1">WebTechProjectFigma</a> </p>
 					<br>
 					<div class="pictures" >
-					<img src="img/1.png" alt="Wireframe1" width="50%" >
-					<img src="img/2.png" alt="Wireframe1" width="40%" >
-					<br>
-					<img src="img/3.png" alt="Wireframe1" width="25%" >
-					<img src="img/4.png" alt="Wireframe1" width="50%">
+						<img src="img/1.png" alt="Wireframe1" style="width: 50%">
+						<img src="img/2.png" alt="Wireframe1" style="width: 40%" >
+						<br>
+						<img src="img/3.png" alt="Wireframe1" style="width: 20%">
+						<img src="img/4.png" alt="Wireframe1" style="width: 50%">
 					</div>
 
 				</div>
 			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12  notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
