--- a/games.html
+++ b/games.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="sk">
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" type="image/png" href="img/snowflake.png">
@@ -51,7 +53,7 @@
 				</div>
 			</section>
 
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12  notlac">
 				<h3>Zisti meniny</h3>
 				<names-day></names-day>
 				<div id="nameday_date_and_name"></div>
