--- a/ine.html
+++ b/ine.html
@@ -1,98 +1,116 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
-	<meta charset="UTF-8">
-	<link rel="icon" type="image/png" href="img/snowflake.png">
-	<title>Projekt</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/site.css">
-	<link rel="stylesheet" href="css/breadcrumbs.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script src="scripts/main_processes.js"></script>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/print.css" >
-	<script src="scripts/trojurovne_menu.js"></script>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="img/snowflake.png">
+    <title>Projekt</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="css/breadcrumbs.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    <script src="scripts/main_processes.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/print.css">
+    <script src="scripts/trojurovne_menu.js"></script>
 </head>
 <body>
-	<header>
-		<div class="spinner">
-		  <div class="cube1"></div>
-		  <div class="cube2"></div>
-		</div>
-		<div> 
-			<h1>Skupinový projekt</h1>
-		</div>
-		<div style="width: 92px; height: 60px;">
-			
-		</div>  
-	</header>
-	<troj-menu></troj-menu>
+<header>
+    <div class="spinner">
+        <div class="cube1"></div>
+        <div class="cube2"></div>
+    </div>
+    <div>
+        <h1>Skupinový projekt</h1>
+    </div>
+    <div style="width: 92px; height: 60px;">
 
-	<ul class="breadcrumbs">
-		<li class="breadcrumbsItem">
-			<a href="index.html" class="breadcrumbsLink">Domov</a>
-		</li>
-		<li class="breadcrumbsItem">
-			<a href="ine.html" class="breadcrumbsLink breadcrumbsLinkActive">Iné</a>
-		</li>
-	</ul>
-	<div>
-		<div class="row content margin-scroll" id="content">
-			<section class="col-lg-9 col-md-12 col-sm-12">
-				<div class="text-in-div container">
-					<h6>O puzzle hrách</h6>
-					<br>
-					<img alt="hra1" src="img/puzzle2.jpg" class="img-left"><p>Puzzle, skladací obrázok (anglická skladačka) alebo mozaika (ruská verzia) je logická hra, v ktorej je potrebné vyrobiť mozaiku z mnohých kúskov kresby rôznych tvarov.Podľa psychológov zbieranie hádaniek prispieva k rozvoju obrazného a logického myslenia, dobrovoľnej pozornosti, vnímania, najmä rozlišovania jednotlivých prvkov farbou, tvarom, veľkosťou atď.; učí vás správne vnímať spojenie medzi časťou a celkom; rozvíja jemnú motoriku. V angličtine jediné slovo „puzzle“ znamená puzzle každého druhu, nie nevyhnutne puzzle. </p><br>
-					<a href="aboutgames.html"> -> Viac o puzzle hrach <-</a>
-					<hr>
-					<br>
-					<h6>Documentacia ku hram</h6>
-					<br>
-					<a href="aboutgames.html"> -> Viac o rozdelenie uloh v projecte <-</a>
-					<hr>
-					<br>
-					<h6>Pouzite linky</h6><br>
-					<p>figma.com<br>
-					https://www.w3schools.com<br>
-					pinterest.com<br>
-					http://jsfiddle.net/<br>
-					https://webgradients.com/<br>
-					https://konvajs.org/docs/sandbox/Animals_on_the_Beach_Game.html (skvelá ukážka + kód)<br>
-					https://color.adobe.com/create/color-wheel<br>
-					https://coolors.co/d7c0d0-f7c7db-f79ad3-c86fc9-8e518d<br>
-					https://htmlcolorcodes.com/color-picker/<br>
-					https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js<br>
-					https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js<br>
-					https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js<br>
-					https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css<br>
-					https://www.apsolyamov.ru/files/html-table-generator.html<br>
+    </div>
+</header>
+<troj-menu></troj-menu>
 
-					</p>
-					<hr>
-				</div>
-			</section>
-			<aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
-				<h3>Zisti meniny</h3>
-				<names-day></names-day>
-				<div id="nameday_date_and_name"></div>
-				<div id="nameday_find"></div>
-				<br>
-			
-			</aside>
-		</div>
-	</div>
-	<footer class="footer">
-	  	<div class="container">
-	  		<a href="#" class="action-print">Vytlačiť stranku</a>
-	  		<hr>
-	  		<br>
-	  		<span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
-	  		<br>
-	  	</div>
-	</footer>
+<ul class="breadcrumbs">
+    <li class="breadcrumbsItem">
+        <a href="index.html" class="breadcrumbsLink">Domov</a>
+    </li>
+    <li class="breadcrumbsItem">
+        <a href="ine.html" class="breadcrumbsLink breadcrumbsLinkActive">Iné</a>
+    </li>
+</ul>
+<div>
+    <div class="row content margin-scroll" id="content">
+        <section class="col-lg-9 col-md-12 col-sm-12">
+            <div class="text-in-div container">
+                <h6>O puzzle hrách</h6>
+                <br>
+                <img alt="hra1" src="img/puzzle2.jpg" class="img-left">
+                <p>Puzzle, skladací obrázok (anglická skladačka) alebo mozaika (ruská verzia) je logická hra, v ktorej
+                    je potrebné vyrobiť mozaiku z mnohých kúskov kresby rôznych tvarov.Podľa psychológov zbieranie
+                    hádaniek prispieva k rozvoju obrazného a logického myslenia, dobrovoľnej pozornosti, vnímania, najmä
+                    rozlišovania jednotlivých prvkov farbou, tvarom, veľkosťou atď.; učí vás správne vnímať spojenie
+                    medzi časťou a celkom; rozvíja jemnú motoriku. V angličtine jediné slovo „puzzle“ znamená puzzle
+                    každého druhu, nie nevyhnutne puzzle. </p><br>
+                <a href="aboutgames.html"> -> Viac o puzzle hrach <-</a>
+                <hr>
+                <br>
+                <h6>Documentacia ku hram</h6>
+                <br>
+                <a href="aboutgames.html"> -> Viac o rozdelenie uloh v projecte <-</a>
+                <hr>
+                <br>
+                <h6>Pouzite linky</h6><br>
+                <p>figma.com<br>
+                    https://www.w3schools.com<br>
+                    pinterest.com<br>
+                    http://jsfiddle.net/<br>
+                    https://webgradients.com/<br>
+                    https://konvajs.org/docs/sandbox/Animals_on_the_Beach_Game.html (skvelá ukážka + kód)<br>
+                    https://color.adobe.com/create/color-wheel<br>
+                    https://coolors.co/d7c0d0-f7c7db-f79ad3-c86fc9-8e518d<br>
+                    https://htmlcolorcodes.com/color-picker/<br>
+                    https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js<br>
+                    https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js<br>
+                    https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js<br>
+                    https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css<br>
+                    https://www.apsolyamov.ru/files/html-table-generator.html<br>
+                    https://medium.com/javascript-in-plain-english/create-your-first-web-component-using-vanilla-javascript-82a50cc742b0<br>
+                    https://learn.javascript.ru/shadow-dom-events<br>
+                    https://draggabilly.desandro.com/<br>
+                    https://github.com/desandro/draggabilly<br>
+                    https://www.hongkiat.com/blog/draggable-elements-with-draggabilly-js/<br>
+                    https://learn.javascript.ru/iterable<br>
+                    https://learn.javascript.ru/custom-elements<br>
+
+                </p>
+                <hr>
+            </div>
+        </section>
+        <aside id="aside" class="col-lg-3 col-md-12 col-sm-12">
+            <h3>Zisti meniny</h3>
+            <names-day></names-day>
+            <div id="nameday_date_and_name"></div>
+            <div id="nameday_find"></div>
+            <br>
+
+        </aside>
+    </div>
+</div>
+<footer class="footer">
+    <div class="container">
+        <a href="#" class="action-print">Vytlačiť stranku</a>
+        <hr>
+        <br>
+        <span>Copr. Hanna Hryharouskaya, Patrik Kupčulák, Tetiana Kukhelna, Vlad Chernov </span>
+        <br>
+    </div>
+</footer>
 </body>
 </html>
