--- a/documentation.html
+++ b/documentation.html
@@ -74,7 +74,7 @@
 						    <tr>
 						        <td><span style="font-family: vt323, monospace; text-align: center;">Tetiana Kukhelna</span></td>
 						        <td>web komponent trojurovneho menu</td>
-						        <td>generovanie menu v troch urovniach pre kazdu stranku. </td>
+						        <td>Vytvorila samostatny subor v akom vytvorila web komponent na generovanie menu v troch urovniach pre kazdu stranku. Pridala jeho na kazdy stranku.</td>
 						        <td>xkukhelna@stuba.sk</td>
 						    </tr>
 						    <tr>
